# contrafact-rs

./: Cargo.toml  README.md  TODO.md  flake.nix
src/: brute.rs  builder.rs  builtins.rs  check.rs  conditional.rs  constraint.rs  constraints.rs  custom.rs  dependent.rs  derived.rs  error.rs  fact.rs  fact2.rs  facts.rs  factual.rs  generator.rs  lambda.rs  lens.rs  lib.rs  main.rs  playground.rs  predicates.rs  primitives.rs  prism.rs  satisfy.rs  seq.rs  stateful.rs  utils.rs
src/builtins/: lambda.rs  seq.rs
src/facts/: and.rs  brute.rs  consecutive_int.rs  constant.rs  eq.rs  in_range.rs  in_slice.rs  lambda.rs  lens.rs  mapped.rs  not.rs  optical.rs  or.rs  prism.rs  same.rs  seq.rs
src/impls/: and.rs  brute.rs  dependent.rs  fun.rs  lambda.rs  lens.rs  mapped.rs  mod.rs  optical.rs  optics.rs  primitives.rs  prism.rs  seq.rs
src/primitives/: in_range.rs  in_slice.rs  same.rs
src/prior/: fact_v1.rs  lens.rs
tests/: chainlink.rs  complex.rs  fizzbuzz.rs  optics.rs  tests.rs
tests/common/: mod.rs
