[package]
name = "contrafact"
version = "0.1.0"
authors = ["Michael Dougherty <maackle.d@gmail.com>"]
edition = "2018"

[dependencies]
arbitrary = {version = "1.0", features = ["derive"]}
derive_more = "0.99"
itertools = "0.10"
tracing = "0.1"
num = "0.4.0"
anyhow = "1.0.40"

# observability = { version = "0.1", optional = true }
# once_cell = { version = "1.5", optional = true }
# rand = { version = "0.7", optional = true }

[dev-dependencies]
observability = "0.1"
once_cell = "1.5"
rand = "0.7"

# [features]
# test = ["observability", "once_cell", "rand"]
