[package]
name = "contrafact"
version = "0.1.0-dev.1"
authors = ["Michael Dougherty <maackle.d@gmail.com>"]
repository = "https://github.com/maackle/contrafact-rs/"
license = "MIT"
description = "A trait for highly composable constraints (\"facts\") which can be used both to verify data and to generate arbitrary data within those constraints"
keywords = ["testing", "fixtures", "constraints", "composable"]
categories = ["development-tools::testing"]
edition = "2018"

[dependencies]
arbitrary = {version = "1.0", features = ["derive"]}
derive_more = "0.99"
itertools = "0.10"
tracing = "0.1"
num = "0.4.0"
anyhow = "1.0.40"

# utils
once_cell = { version = "1.5", optional = true }
rand = { version = "0.7", optional = true }

# lens
lens-rs = { version = "0.3", optional = true }

[dev-dependencies]
either = "1.5"
observability = "0.1"

[features]
default = ["utils", "lens"]

utils = [
    "once_cell",
    "rand",
]

lens = [
    "lens-rs",
]

[package.metadata.inwelling]
lens-rs_generator = true